--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,19 @@
 .body-div {
-    padding: 10%;
-    width: 50%;
+    padding: 20%;
+    width: 90%;
     max-width: 600px;
 }
 
+/* .explain-div {
+    background-color: aqua;
+} */
+
+
 .input-module {
-    width: 100%;
+    width: 95%;
     padding-top: 15px;
 }
+
 
 .mat-body1 {
     color: rgb(73, 73, 73);
@@ -21,4 +27,13 @@
 
 .button-row-item {
     margin-right: 10px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 60% auto;
+}
+
+.grid-right {
+    background-color: bisque;
 }
