--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -4,7 +4,7 @@
         <div class="mat-body1">{{subtitle}}</div>
         <mat-form-field appearance="fill" class="input-module">
             <mat-label>{{title}}</mat-label>
-            <textarea matInput rows="5"></textarea>
+            <textarea matInput rows="5" [(ngModel)]="textInput"></textarea>
         </mat-form-field>
     </div>
 
