--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -15,7 +15,7 @@
         </div>
         <mat-form-field appearance="fill" class="input-module">
             <mat-label>{{title}}</mat-label>
-            <input matInput>
+            <input matInput [(ngModel)]="textInput">
         </mat-form-field>
     </div>
 </div>
