Added example component and event messaging service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Bundesgestaltung Prototype</span>
+</mat-toolbar>
 <div class="grid-container">
   <div class="grid-left">
     <div class="body-div">
@@ -5,6 +11,7 @@
     </div>
   </div>
   <div class="grid-right">
-    <div class="explain-div">.</div>
+    <div class="explain-div">
+      <app-example></app-example>
+    </div>
   </div>
-</div>
