--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,14 @@
 .body-div {
-    padding: 20%;
+    padding-left: 20%;
     width: 90%;
     max-width: 600px;
 }
 
-/* .explain-div {
-    background-color: aqua;
-} */
+.explain-div {
+    position: fixed;
+    padding-top: 15%;
+    padding-left: 50px;
+}
 
 
 .input-module {
@@ -19,21 +21,11 @@
     color: rgb(73, 73, 73);
 }
 
-
-.button-row {
-    display: table-cell;
-    padding-top: 80px;
-}
-
-.button-row-item {
-    margin-right: 10px;
-}
-
 .grid-container {
     display: grid;
     grid-template-columns: 60% auto;
 }
 
-.grid-right {
+/* .grid-right {
     background-color: bisque;
-}
+} */
