--- a/src/app/section-list/section-list.component.html
+++ b/src/app/section-list/section-list.component.html
@@ -3,6 +3,7 @@
 </div>
 
 <div class="button-row">
-    <button mat-raised-button color="primary" class="button-row-item" (click)="onClick()">Veröffentlichen</button>
+    <button mat-raised-button color="primary" class="button-row-item"
+        (click)="onTextareaClick()">Veröffentlichen</button>
     <button mat-raised-button color="secondary" class="button-row-item">Zwischenspeichern</button>
 </div>
