Moved section data to JSON file and added service to query it

--- a/src/app/section-list/section-list.component.html
+++ b/src/app/section-list/section-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let data of sectionData">
+<div *ngFor="let data of sections">
     <app-section [title]="data.title" [subtitle]="data.subtitle" [isTextarea]="data.isTextarea"></app-section>
 </div>
 
