--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mat-elevation-z4">
     <div *ngIf="isTextarea === true">
         <div class="mat-title">{{title}}</div>
         <div class="mat-body1">{{subtitle}}</div>
