--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -8,13 +8,13 @@
         </mat-form-field>
     </div>
 
-    <div *ngIf="data.isTextarea != true" class="input-module">
-        <div class="mat-title">{{data.title}}</div>
+    <div *ngIf="isTextarea != true" class="input-module">
+        <div class="mat-title">{{title}}</div>
         <div class="mat-body1">
-            {{data.subtitle}}
+            {{subtitle}}
         </div>
         <mat-form-field appearance="fill" class="input-module">
-            <mat-label>{{data.title}}</mat-label>
+            <mat-label>{{title}}</mat-label>
             <input matInput [(ngModel)]="textInput">
         </mat-form-field>
     </div>
