--- a/src/app/section-list/section-list.component.html
+++ b/src/app/section-list/section-list.component.html
@@ -6,8 +6,11 @@
 </div>
 <!-- </mat-stepper> -->
 <div class="button-row">
+  <div layout="row" layout-align="start center">
     <button mat-raised-button color="primary" class="button-row-item"
       (click)="onSubmit()">Speichern</button>
-    <button mat-raised-button color="secondary" class="button-row-item"
+      <span flex></span>
+      <button mat-raised-button color="secondary" class="button-row-item"
       (click)="onCancel()">Verwerfen</button>
+    </div>
 </div>
