--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="isTextarea === true">
         <div class="mat-title">{{title}}</div>
         <div class="mat-body1">{{subtitle}}</div>
-        <mat-form-field appearance="fill" class="input-module" (mouseenter)="eventService.setActive(title)">
+        <mat-form-field appearance="fill" class="input-module" (mouseenter)="activateThis()">
             <mat-label>{{title}}</mat-label>
             <textarea matInput rows="5" [(ngModel)]="textInput"></textarea>
         </mat-form-field>
