--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
-  </button>
+  </button> -->
   <span>Bundesgestaltung Prototype</span>
+  <button mat-button (click)="logout()"><mat-icon>logout</mat-icon> Logout</button>
 </mat-toolbar>
 <div class="grid-container">
   <div class="grid-left">
