--- a/src/app/loginscreen/loginscreen.component.css
+++ b/src/app/loginscreen/loginscreen.component.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(242, 247, 249, 96);
+  background-color: rgb(245, 249, 255);
 }
 
 .right {
@@ -17,8 +17,8 @@
 
 
 .mat-form-field {
-  width: 30%;
-  min-width: 300px;
+  width: 80%;
+  min-width: 250px;
 }
 
 .login-box {
