--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar (click)="drawer.toggle()">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item [routerLink]='["/dashboard"]'>Dashboard</a>
-      <a mat-list-item href="#">Guidelines</a>
+      <a mat-list-item [routerLink]='["/sectionlist"]'>Guidelines</a>
       <a mat-list-item href="#">Textbausteine</a>
     </mat-nav-list>
   </mat-sidenav>
