--- a/src/app/listoverview/listoverview.component.html
+++ b/src/app/listoverview/listoverview.component.html
@@ -1,14 +1,42 @@
-<div class="list-container">
-
+<div *ngIf="userRoleService.getUserRole() === 'human_resources'" class="list-container">
 <div align="end">
-  <button mat-fab color="primary" (click)="addNewJobDescription()"><mat-icon>add</mat-icon>
+  <button mat-fab color="primary" (click)="onAddJobDescription()"><mat-icon>add</mat-icon>
   </button>
 </div>
 
 <div class="mat-title">Neue Stellen</div>
 <mat-list role="list">
   <div  *ngFor="let item of jds">
-  <mat-list-item role="listitem">{{ item.id }}</mat-list-item>
+  <mat-list-item *ngIf="item.stage === 'new'" role="listitem" (click)="openToEditByHr(item.key)">{{ item.id }}</mat-list-item>
+  </div>
+</mat-list>
+<div class="mat-title">In bearbeitung durch Fachabteilung</div>
+<mat-list role="list">
+  <div  *ngFor="let item of jds">
+  <mat-list-item *ngIf="item.stage === 'send_to_department' || item.stage === 'in_edit_by_department'" role="listitem" (click)="openToEditByHr(item.key)">{{ item.id }}</mat-list-item>
   </div>
 </mat-list>
 </div>
+
+
+<div *ngIf="userRoleService.getUserRole() === 'department'" class="list-container">
+
+  <div class="mat-title">Neue Stellen</div>
+  <mat-list role="list">
+    <div  *ngFor="let item of jds">
+    <mat-list-item *ngIf="item.stage === 'send_to_department'" role="listitem" (click)="openToEditByDepartment(item.key)">{{ item.id }}</mat-list-item>
+    </div>
+  </mat-list>
+  <div class="mat-title">In Bearbeitung</div>
+  <mat-list role="list">
+    <div  *ngFor="let item of jds">
+    <mat-list-item *ngIf="item.stage === 'in_edit_by_department'" role="listitem" (click)="openToEditByDepartment(item.key)">{{ item.id }}</mat-list-item>
+    </div>
+  </mat-list>
+  <div class="mat-title">Fertiggestellt</div>
+  <mat-list role="list">
+    <div  *ngFor="let item of jds">
+    <mat-list-item *ngIf="item.stage === 'completed_by_department'" role="listitem" (click)="openToEditByDepartment(item.key)">{{ item.id }}</mat-list-item>
+    </div>
+  </mat-list>
+  </div>
