--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,8 +6,8 @@
     <mat-toolbar (click)="drawer.toggle()">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item [routerLink]='["dashboard"]'>Dashboard</a>
-      <a mat-list-item [routerLink]='["hiringmanager"]'>Guidelines</a>
-      <a mat-list-item [routerLink]='["hiringmanager"]'>{{ userRoleService.role }}</a>
+      <!-- <a mat-list-item [routerLink]='["hiringmanager"]'>Guidelines</a> -->
+      <!-- <a mat-list-item [routerLink]='["hiringmanager"]'>{{ userRoleService.role }}</a> -->
       <!-- <a mat-list-item [routerLink]='["newjobdescription"]'>Textbausteine</a> -->
     </mat-nav-list>
   </mat-sidenav>
@@ -26,9 +26,9 @@
           <mat-icon>person</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-          <mat-radio-group [(ngModel)]="userRoleService.role">
+          <mat-radio-group [(ngModel)]="userRoleService.role" (change)="onRoleChange()">
             <button mat-menu-item>
-          <mat-radio-button [value]="_human_resources" checked="true">
+          <mat-radio-button [value]="_human_resources" checked="true" >
             Personal
           </mat-radio-button>
         </button>
