--- a/src/app/loginscreen/loginscreen.component.html
+++ b/src/app/loginscreen/loginscreen.component.html
@@ -7,7 +7,7 @@
     <mat-card>
       <mat-card-title>Willkommen</mat-card-title>
       <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="submit()">
+        <form [formGroup]="form" (ngSubmit)="fakeSubmit()">
           <p>
             <mat-form-field>
               <input type="email" matInput placeholder="Email" formControlName="email">
@@ -22,7 +22,7 @@
           </p>
 
           <div class="button">
-            <button type="submit" (ngSubmit)='submit()' mat-button>Login</button>
+            <button type="submit" mat-button>Login</button>
           </div>
         </form>
       </mat-card-content>
