--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar (click)="drawer.toggle()">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item [routerLink]='["dashboard"]'>Dashboard</a>
-      <!-- <a mat-list-item [routerLink]='["hiringmanager"]'>Guidelines</a> -->
+      <a mat-list-item [routerLink]='["preview"]'>Vorschau</a>
       <!-- <a mat-list-item [routerLink]='["hiringmanager"]'>{{ userRoleService.role }}</a> -->
       <!-- <a mat-list-item [routerLink]='["newjobdescription"]'>Textbausteine</a> -->
     </mat-nav-list>
